# ModelContexProtocol

./: README.md  client.py  main.py  pyproject.toml  weather.py
Addition_mcp_server/: __main__.py  deployment.py
streamable_http_server/: server.py
