[project]
name = "ModelContextProtocol"
version = "0.1.0"
description = "simple mcp server for adding two numbers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.26.0",
]

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
mcp-server = "Addition_mcp_server.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["Addition_mcp_server*"]
